modified front pages

--- a/src/main/resources/templates/analysis/chart_statistic.html
+++ b/src/main/resources/templates/analysis/chart_statistic.html
@@ -246,7 +246,7 @@
     legend: {
       orient: 'vertical',
       x: 'left',
-      data:['放映机','服务器','音响','功放','3D系统']
+      // data:['放映机','服务器','音响','功放','3D系统']
     },
     series: [
       {
