--- a/src/main/resources/templates/base/cinema/search.html
+++ b/src/main/resources/templates/base/cinema/search.html
@@ -86,7 +86,7 @@
       <div class="col-12">
       <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">请输入影院检索信息</h3>
+              <h3 class="card-title">影院检索信息</h3>
             </div>
             <!-- /.card-header -->
             <!-- form start -->
