--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -86,7 +86,7 @@
       <div class="col-12">
       <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">请输入设备检索信息</h3>
+              <h3 class="card-title">设备检索信息</h3>
             </div>
             <!-- /.card-header -->
             <!-- form start -->
@@ -187,7 +187,6 @@
                 <th>品牌</th>
                 <th>系列</th>
                 <th>型号</th>
-                <th>序列号</th>
                 <th>详情</th>
               </tr>
               </thead>
@@ -199,17 +198,15 @@
                 <td th:text="${cinema.responsible}">张三</td>
                 <td th:text="${cinema.responsiblePhone}">140000</td>
                 <td th:text="${cinema.manager}">ac</td>
-                <td th:text="${cinema.managerPhone}">dfjlsd</td>
                 <th><a href="/base/equipment/details">详情</a></th>
               </tr>
               <tr>
-                <td >23543</td>
-                <td >扬声器</td>
-                <td >HARMAN</td>
-                <td >HARMAN</td>
-                <td >T</td>
-                <td >HARMAN</td>
-                <td >14-00-00-08-38-95</td>
+                <td >23343</td>
+                <td >放映机</td>
+                <td >科视</td>
+                <td >科视Christie</td>
+                <td >CP4325</td>
+                <td >CP4325-RGB</td>
                 <th><a href="/base/equipment/details">详情</a></th>
               </tr>
               <tr>
@@ -219,8 +216,7 @@
                 <td >华为</td>
                 <td >存储系列</td>
                 <td >SLM</td>
-                <td >14-00-00-08-38-95</td>
-                <th><a href="/base/equipment/details">详情</a></th>
+                <th><a href="#">详情</a></th>
               </tr>
               <tr>
                 <td >23356</td>
@@ -229,8 +225,7 @@
                 <td >惠普</td>
                 <td >计算系列</td>
                 <td >HP_LL</td>
-                <td >14-00-00-08-38-95</td>
-                <th><a href="/base/equipment/details">详情</a></th>
+                <th><a href="#">详情</a></th>
               </tr>
               </tbody>
             </table>
