--- a/src/main/resources/templates/documents/stand_details.html
+++ b/src/main/resources/templates/documents/stand_details.html
@@ -124,7 +124,7 @@
                           <a href="#" class="mailbox-attachment-name"><i class="fa fa-paperclip"></i> 数字电影中档和流动放映系统版本1.pdf</a>
                           <span class="mailbox-attachment-size">
                           1,245 KB
-                          <a href="#" class="btn btn-default btn-sm float-right"><i class="fa fa-cloud-download"></i></a>
+<!--                          <a href="#" class="btn btn-default btn-sm float-right"><i class="fa fa-cloud-download"></i></a>-->
                         </span>
                         </div>
                         <span class="mailbox-attachment-icon">
@@ -134,7 +134,7 @@
                           <a href="#" class="mailbox-attachment-name"><i class="fa fa-paperclip"></i> 数字电影中档和流动放映系统版本2.pdf</a>
                           <span class="mailbox-attachment-size">
                           1,245 KB
-                          <a href="#" class="btn btn-default btn-sm float-right"><i class="fa fa-cloud-download"></i></a>
+<!--                          <a href="#" class="btn btn-default btn-sm float-right"><i class="fa fa-cloud-download"></i></a>-->
                         </span>
                         </div>
                       </div>
