--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/system/blank_api" class="nav-link">
+                    <a href="/system/api" class="nav-link">
                         <i class="fa fa-plug nav-icon"></i>
                         <p>数据接口管理</p>
                     </a>
@@ -166,7 +166,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="/blank" class="nav-link">
+            <a href="/star/search" class="nav-link">
                 <i class="nav-icon fa fa-table"></i>
                 <p>
                     影院星级评定
