--- a/src/main/resources/templates/system/role.html
+++ b/src/main/resources/templates/system/role.html
@@ -85,57 +85,13 @@
         <section class="content">
             <div class="row">
                 <div class="col-12">
-<!--                    <div class="card card-primary">-->
-<!--                        <div class="card-header">-->
-<!--                            <h3 class="card-title">请输入标准检索信息</h3>-->
-<!--                        </div>-->
-<!--                        &lt;!&ndash; /.card-header &ndash;&gt;-->
-<!--                        &lt;!&ndash; form start &ndash;&gt;-->
-<!--                        <form role="form">-->
-<!--                            <div class="card-body">-->
-<!--                                <div class="row">-->
-<!--                                    <div class="col-3 float-lg-left">-->
-<!--                                        <div class="form-group">-->
-<!--                                            <label>所在省市：</label>-->
-<!--                                            <select id="province" class="form-control" name="province">-->
-<!--                                            </select>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                    <div class="col-3 float-lg-right">-->
-<!--                                        <div class="form-group">-->
-<!--                                            <label>所在区：</label>-->
-<!--                                            <select id="city" class="form-control" name="city">-->
-<!--                                            </select>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                    <div class="form-group col-3 float-lg-left">-->
-<!--                                        <label>影院名称：</label>-->
-<!--                                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">-->
-<!--                                    </div>-->
-<!--                                    <div class="form-group col-3 float-lg-right">-->
-<!--                                        <label>影院经理：</label>-->
-<!--                                        <input type="text" class="form-control" placeholder="例：张XX" name="responsible">-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                                <div class="card-footer">-->
-<!--                                    <div class="row col-sm-2 float-lg-right">-->
-<!--                                        <button type="submit" class="btn btn-primary">查询</button>-->
-<!--                                        <span class="col-sm-2"> &nbsp;&nbsp;</span>-->
-<!--                                        <a href="/cinema/insert" style="color: #ffffff;">-->
-<!--                                            <button type="button" class="btn btn-primary">添加</button>-->
-<!--                                        </a>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </form>-->
-<!--                    </div>-->
                     <div class="card card-primary">
                         <div class="card-header">
                             <h3 class="card-title">权限信息</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
-                            <table id="example1" class="table table-bordered table-striped">
+                            <table class="table table-bordered table-striped">
                                 <thead>
                                 <tr>
                                     <th>权限名称</th>
