--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -68,8 +68,9 @@
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">主页</a></li>
-              <li class="breadcrumb-item active">经验交流</li>
+              <li class="breadcrumb-item"><a href="/index">主页</a></li>
+                <li class="breadcrumb-item"><a href="/chat/list">消息列表</a></li>
+                <li class="breadcrumb-item active">经验交流</li>
             </ol>
           </div>
         </div>
@@ -164,7 +165,28 @@
                         <p>服务器，也称伺服器，是提供计算服务的设备。由于服务器需要响应服务请求，并进行处理，
                             因此一般来说服务器应具备承担服务并且保障服务的能力。服务器的构成包括处理器、硬盘、内存、系统总线等，
                             和通用的计算机架构类似，但是由于需要提供高可靠的服务，因此在处理能力、稳定性、可靠性、安全性.</p>
-                        <!-- post text -->
+                        <div class="row mb-3">
+                            <div class="col-sm-6">
+                                <img class="img-fluid" th:src="@{/images/server.jpeg}" alt="Photo">
+                            </div>
+                            <!-- /.col -->
+                            <div class="col-sm-6">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <!--                                        <img class="img-fluid mb-3" th:src="@{/dist/img/photo2.png}" alt="Photo">-->
+                                        <!--                                        <img class="img-fluid" src="../../dist/img/photo3.jpg" alt="Photo">-->
+                                    </div>
+                                    <!-- /.col -->
+                                    <div class="col-sm-6">
+                                        <!--                                        <img class="img-fluid mb-3" src="../../dist/img/photo4.jpg" alt="Photo">-->
+                                        <!--                                        <img class="img-fluid" src="../../dist/img/photo1.png" alt="Photo">-->
+                                    </div>
+                                    <!-- /.col -->
+                                </div>
+                                <!-- /.row -->
+                            </div>
+                            <!-- /.col -->
+                        </div>
                         <p>第一：我们首先应该配置服务器的外部接口。你应该已经知道如何做到这一点，并且可能已经完成了。
                             如果你不这样做，那么现在就这样做。</p>
                         <p>第二：现在我们调出内部接口。根据我们选择的数字，服务器的内部接口是192.168.40.254。
@@ -174,6 +196,8 @@
                             这需要更多的代码行。为了访问其他子网上的其他计算机，我们需要一条路由来告知流量到Cisco路由器。
                             这是那条线：＃/ sbin / route add -net 192.168.0.0 gw 192.168.254.254 netmask
                             255.255.0.0 dev eth1</p>
+
+
 
                         <!-- Social sharing buttons -->
                         <button type="button" class="btn btn-default btn-sm"><i class="fa fa-share"></i> 分享</button>
