--- a/src/main/resources/templates/star/insert.html
+++ b/src/main/resources/templates/star/insert.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>资产信息管理</title>
+  <title>影院星级评定申请</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -69,12 +69,12 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1>资产信息管理</h1>
+              <h1>星级评定基本</h1>
             </div>
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item"><a href="#">主页</a></li>
-                <li class="breadcrumb-item active">资产信息管理</li>
+                <li class="breadcrumb-item active">影院星级评定</li>
               </ol>
             </div>
           </div>
@@ -86,63 +86,43 @@
           <div class="col-12">
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">请输入影院信息</h3>
+                <h3 class="card-title">影院星级评定申请</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form" th:action="@{/base/cinema/inserting}">
+              <form role="form" action="">
                 <div class="card-body">
                   <div class="form-group">
                     <div class="row">
                       <div class="row col-12">
-                        <div class="col-2">
+                        <div class="col-6">
                           <div class="form-group">
-                            <label>影院ID：</label>
-                            <input class="form-control" name="id">
+                            <label>影院名称：</label>
+                            <input class="form-control" name="name">
                           </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-6">
                           <div class="form-group">
-                            <label>所在省市：</label>
-                            <select id="province" class="form-control" name="province">
+                            <label>影院地址：</label>
+                            <select id="province" class="form-control" name="address">
                             </select>
                           </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-4">
                           <div class="form-group">
-                            <label>所在区：</label>
-                            <select id="city" class="form-control" name="city">
+                            <label>联系人：</label>
+                            <select id="city" class="form-control" name="responsible">
                             </select>
                           </div>
                         </div>
-                        <div class="form-group col-6">
-                          <label>详细地址：</label>
-                          <input type="text" class="form-control" placeholder="例：平乐园100号" name="address">
+                        <div class="form-group col-4">
+                          <label>申请事项：</label>
+                          <input type="text" class="form-control" placeholder="影院星级评定" name="task">
                         </div>
-                      </div>
-                      <div class="form-group col-6 float-lg-left">
-                        <label>影院名称：</label>
-                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
-                      </div>
-                      <div class="form-group col-6 float-lg-right">
-                        <label>影厅数量：</label>
-                        <input type="text" class="form-control" placeholder="例：10" name="roomNumber">
-                      </div>
-                      <div class="form-group col-6 float-lg-right">
-                        <label>影院经理：</label>
-                        <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
-                      </div>
-                      <div class="form-group col-6 float-lg-right">
-                        <label>经理电话：</label>
-                        <input type="text" class="form-control" placeholder="例：15000000000" name="responsiblePhone">
-                      </div>
-                      <div class="form-group col-6 float-lg-right">
-                        <label>影院主管：</label>
-                        <input type="text" class="form-control" placeholder="例：李XX" name="manager">
-                      </div>
-                      <div class="form-group col-6 float-lg-right">
-                        <label>主管电话：</label>
-                        <input type="text" class="form-control" placeholder="例：15000000000" name="managerPhone">
+                        <div class="form-group col-4 ">
+                          <label>申请日期：</label>
+                          <input type="text" class="form-control" name="date">
+                        </div>
                       </div>
 
                     </div>
@@ -151,7 +131,9 @@
                   <div class="form-group">
                     <div class="card-footer">
                       <div class="row float-lg-right">
-                        <button type="submit" class="btn btn-primary">添加</button>
+                        <button type="submit" class="btn btn-primary">提交</button>
+                        <span > &nbsp; &nbsp;</span>
+                        <button type="button" class="btn btn-primary">打印</button>
                       </div>
                     </div>
                   </div>
