--- a/src/main/resources/templates/star/search.html
+++ b/src/main/resources/templates/star/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>资产信息管理</title>
+  <title>影院星级评定</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -69,12 +69,12 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1>资产信息管理</h1>
+          <h1>影院星级评定</h1>
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
             <li class="breadcrumb-item"><a href="#">主页</a></li>
-            <li class="breadcrumb-item active">资产信息管理</li>
+            <li class="breadcrumb-item active">影院星级评定</li>
           </ol>
         </div>
       </div>
@@ -86,49 +86,41 @@
       <div class="col-12">
       <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">请输入影院信息</h3>
+              <h3 class="card-title">影院星级检索</h3>
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form role="form" action="/base/cinema/show">
+            <form role="form" action="">
               <div class="card-body">
                 <div class="form-group">
                   <div class="row">
-                    <div class="col-3 float-lg-left">
+                    <div class="col-6 float-lg-left">
                       <div class="form-group">
-                        <label>所在省市：</label>
-                        <select id="province" class="form-control" name="province">
+                        <label>级别：</label>
+                        <select class="form-control" name="type">
+                          <option>一星</option>
+                          <option>二星</option>
+                          <option>三星</option>
+                          <option>四星</option>
+                          <option>五星</option>
                         </select>
                       </div>
                     </div>
-                    <div class="col-3 float-lg-right">
-                      <div class="form-group">
-                        <label>所在区：</label>
-                        <select id="city" class="form-control" name="city">
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group col-3 float-lg-left">
-                      <label>影院名称：</label>
-                      <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
-                    </div>
-                    <div class="form-group col-3 float-lg-right">
-                      <label>影院经理：</label>
-                      <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
+                    <div class="col-6 float-lg-right">
+                      <label>电影院：</label>
+                      <input type="text" class="form-control" name="number">
                     </div>
                   </div>
                 </div>
                   <!-- /.card-body -->
                 <div class="form-group">
-                  <div class="row col-sm-4 float-right">
-                    <div style="margin-left: 175px;">
-                      <button type="submit" class="btn btn-primary">筛选</button>
-                      <span class="col-sm-2"> &nbsp; &nbsp;</span>
-                      <button type="button" class="btn btn-primary">导入</button>
-                      <span class="col-sm-2"> &nbsp; &nbsp;</span>
-                      <a href="/base/cinema/insert" style="color: #ffffff;" class="col-sm-2">
-                        <button type="button" class="btn btn-primary ">添加</button>
-                      </a>
+                  <div class="card-footer">
+                    <div class="row float-right">
+                        <button type="submit" class="btn btn-primary">查询</button>
+                        <span> &nbsp; &nbsp;</span>
+                        <a href="/star/insert" style="color: #ffffff;">
+                          <button type="button" class="btn btn-primary ">星级评定申请</button>
+                        </a>
                     </div>
                   </div>
                 </div>
@@ -137,55 +129,54 @@
       </div>
         <div class="card card-primary">
           <div class="card-header">
-            <h3 class="card-title">基础信息检索结果</h3>
+            <h3 class="card-title">星级评定检索结果</h3>
           </div>
           <!-- /.card-header -->
           <div class="card-body">
             <table id="example1" class="table table-bordered table-striped">
               <thead>
               <tr>
-                <th>影院ID</th>
+                <th>检测编号</th>
                 <th>影院名称</th>
-                <th>省市区</th>
-                <th>地址</th>
-                <th>影院经理</th>
-                <th>经理电话</th>
-                <th>影院主管</th>
-                <th>主管电话</th>
-                <th>影厅数量</th>
-                <th>操作</th>
-                <th>详情</th>
+                <th>检测结果</th>
+                <th>级别</th>
+                <th>检测日期</th>
               </tr>
               </thead>
               <tbody>
               <tr th:each="cinema : ${cinemas}">
-                <td th:text="${cinema.id}">北京XXX影城</td>
                 <td th:text="${cinema.cinemaName}">北京XXX影城</td>
                 <td th:text="${cinema.province + cinema.city}">北京市 朝阳区</td>
                 <td th:text="${cinema.address}">平乐园100号</td>
                 <td th:text="${cinema.responsible}">张三</td>
                 <td th:text="${cinema.responsiblePhone}">140000</td>
-                <td th:text="${cinema.manager}">ac</td>
-                <td th:text="${cinema.managerPhone}">dfjlsd</td>
-                <td th:text="${cinema.roomNumber}">1300000000</td>
-                <td>
-                  <div class="float-lg-left">
-                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">
-                      <button type="button" class="btn btn-sm" style="color: green">修改</button>
-                    </a>
-                    <a href="/base/cinema/delete" style="color: #ffffff;">
-                      <button type="button" class="btn btn-sm" style="color: red">删除</button>
-                    </a>
-                  </div>
-                </td>
-                <td ><a th:href="@{/assets/details}">详情>></a></td>
+              </tr>
+              <tr>
+                <td >0010201911010001</td>
+                <td >北京UME影城（华星店）</td>
+                <td >合格</td>
+                <td >5</td>
+                <td >2019/11/16</td>
+              </tr>
+              <tr>
+                <td >0010201911010002</td>
+                <td >北京UME影城（双井店）</td>
+                <td >合格</td>
+                <td >4</td>
+                <td >2019/11/16</td>
+              </tr>
+              <tr>
+                <td >0010201911010003</td>
+                <td >北京东融国际影城</td>
+                <td >不合格</td>
+                <td >0</td>
+                <td >2019/11/16</td>
               </tr>
               </tbody>
             </table>
           </div>
           <!-- /.card-body -->
         </div>
-
         <!-- /.card -->
       </div>
       <!-- /.col -->
@@ -195,8 +186,14 @@
   </div>
 <!-- /.content-wrapper -->
   <div th:replace="/model/footer :: footer-and-right"></div>
-<!-- ./wrapper -->
+  <!-- Control Sidebar -->
+<!--  <aside class="control-sidebar control-sidebar-dark">-->
+<!--    &lt;!&ndash; Control sidebar content goes here &ndash;&gt;-->
+<!--  </aside>-->
+  <!-- /.control-sidebar -->
 </div>
+<!-- ./wrapper -->
+
 <!-- jQuery -->
 <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
 <!-- Bootstrap 4 -->
