--- a/src/main/resources/templates/star/show.html
+++ b/src/main/resources/templates/star/show.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>资产信息管理</title>
+    <title>设备基础信息管理</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -16,6 +16,7 @@
     <link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
     <script type='text/javascript' th:src='@{/dist/js/jquery-1.11.1.min.js}'></script>
     <script type='text/javascript' th:src='@{/dist/js/city.js}'></script>
+
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -35,6 +36,7 @@
                 <a href="#" class="nav-link"></a>
             </li>
         </ul>
+
         <!-- Right navbar links -->
         <ul class="navbar-nav ml-auto">
             <!-- Messages Dropdown Menu -->
@@ -48,6 +50,7 @@
         </ul>
     </nav>
     <!-- /.navbar -->
+
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
@@ -69,12 +72,12 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>资产信息管理</h1>
+                        <h1>设备基础信息管理</h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a href="#">主页</a></li>
-                            <li class="breadcrumb-item active">资产信息管理</li>
+                            <li class="breadcrumb-item active">设备基础信息管理</li>
                         </ol>
                     </div>
                 </div>
@@ -86,44 +89,84 @@
                 <div class="col-12">
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">请输入影院信息</h3>
+                            <h3 class="card-title">请输入设备检索信息</h3>
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
-                        <form role="form">
+                        <form role="form" action="/base/equipment/show">
                             <div class="card-body">
-                                <div class="row">
-                                    <div class="col-3 float-lg-left">
-                                        <div class="form-group">
-                                            <label>所在省市：</label>
-                                            <select id="province" class="form-control" name="province">
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-2 float-lg-left">
+                                            <div class="form-group">
+                                                <label>种类：</label>
+                                                <select class="form-control" name="type">
+                                                    <option>放映机</option>
+                                                    <option>音响</option>
+                                                    <option>服务器</option>
+                                                    <option>音频处理器</option>
+                                                    <option>功放设备</option>
+                                                    <option>3D系统</option>
+                                                    <option>D系统</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-2 float-lg-right">
+                                            <div class="form-group">
+                                                <label>规格/类型：</label>
+                                                <select class="form-control" name="brand">
+                                                    <option>氙灯</option>
+                                                    <option>汞灯</option>
+                                                    <option>激光</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-2 float-lg-left">
+                                            <label>品牌：</label>
+                                            <select class="form-control" name="brand">
+                                                <option>可视</option>
+                                                <option>巴克</option>
+                                                <option>杜比</option>
+                                                <option>戴尔</option>
                                             </select>
                                         </div>
-                                    </div>
-                                    <div class="col-3 float-lg-right">
-                                        <div class="form-group">
-                                            <label>所在区：</label>
-                                            <select id="city" class="form-control" name="city">
+                                        <div class="col-2 float-lg-left">
+                                            <label>系列：</label>
+                                            <select class="form-control" name="brand">
+                                                <option>CLP 系列</option>
+                                                <option>SLP 系列</option>
+                                                <option>B 系列</option>
+                                                <option>C 系列</option>
+                                                <option>L 系列</option>
+                                                <option>LHC 系列</option>
                                             </select>
                                         </div>
-                                    </div>
-                                    <div class="form-group col-3 float-lg-left">
-                                        <label>影院名称：</label>
-                                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
-                                    </div>
-                                    <div class="form-group col-3 float-lg-right">
-                                        <label>影院经理：</label>
-                                        <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
+                                        <div class="col-2 float-lg-left">
+                                            <label>型号：</label>
+                                            <select class="form-control" name="brand">
+                                                <option>CLP </option>
+                                                <option>SLP </option>
+                                                <option>B </option>
+                                                <option>C </option>
+                                                <option>L </option>
+                                                <option>LHC </option>
+                                            </select>
+                                        </div>
+                                        <div class="col-2 float-lg-right">
+                                            <label>序列号：</label>
+                                            <input type="text" class="form-control" placeholder="例：XXXX-XXXXX-XXXX" name="number">
+                                        </div>
                                     </div>
                                 </div>
+                                <!-- /.card-body -->
                                 <div class="form-group">
                                     <div class="row col-sm-4 float-right">
-                                        <div style="margin-left: 175px;">
+                                        <div style="margin-left: 180px;">
                                             <button type="submit" class="btn btn-primary">筛选</button>
                                             <span class="col-sm-2"> &nbsp; &nbsp;</span>
                                             <button type="button" class="btn btn-primary">导入</button>
                                             <span class="col-sm-2"> &nbsp; &nbsp;</span>
-                                            <a href="/base/cinema/insert" style="color: #ffffff;" class="col-sm-2">
+                                            <a href="/base/equipment/insert" style="color: #ffffff;">
                                                 <button type="button" class="btn btn-primary ">添加</button>
                                             </a>
                                         </div>
@@ -141,22 +184,18 @@
                             <table id="example1" class="table table-bordered table-striped">
                                 <thead>
                                 <tr>
-                                    <th>影院ID</th>
-                                    <th>影院名称</th>
-                                    <th>省市区</th>
-                                    <th>地址</th>
-                                    <th>影院经理</th>
-                                    <th>经理电话</th>
-                                    <th>影院主管</th>
-                                    <th>主管电话</th>
-                                    <th>影厅数量</th>
-                                    <th>操作</th>
+                                    <th>设备ID</th>
+                                    <th>种类</th>
+                                    <th>规格/类型</th>
+                                    <th>品牌</th>
+                                    <th>系列</th>
+                                    <th>型号</th>
+                                    <th>序列号</th>
                                     <th>详情</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr th:each="cinema : ${cinemas}">
-                                    <td th:text="${cinema.id}">北京XXX影城</td>
                                     <td th:text="${cinema.cinemaName}">北京XXX影城</td>
                                     <td th:text="${cinema.province + cinema.city}">北京市 朝阳区</td>
                                     <td th:text="${cinema.address}">平乐园100号</td>
@@ -164,29 +203,49 @@
                                     <td th:text="${cinema.responsiblePhone}">140000</td>
                                     <td th:text="${cinema.manager}">ac</td>
                                     <td th:text="${cinema.managerPhone}">dfjlsd</td>
-                                    <td th:text="${cinema.roomNumber}">1300000000</td>
-                                    <td>
-                                        <div class="float-lg-left">
-                                            <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">
-                                                <button type="button" class="btn btn-sm" style="color: green">修改</button>
-                                            </a>
-                                            <a href="/base/cinema/delete" style="color: #ffffff;">
-                                                <button type="button" class="btn btn-sm" style="color: red">删除</button>
-                                            </a>
-                                        </div>
-                                    </td>
-                                    <td ><a th:href="@{/details}">详情>></a></td>
+                                    <th><a href="/details">详情</a></th>
+                                </tr>
+                                <tr>
+                                    <td >23543</td>
+                                    <td >扬声器</td>
+                                    <td >HARMAN</td>
+                                    <td >HARMAN</td>
+                                    <td >T</td>
+                                    <td >HARMAN</td>
+                                    <td >14-00-00-08-38-95</td>
+                                    <th><a href="/details">详情</a></th>
+                                </tr>
+                                <tr>
+                                    <td >23892</td>
+                                    <td >服务器</td>
+                                    <td >高级存储</td>
+                                    <td >华为</td>
+                                    <td >存储系列</td>
+                                    <td >SLM</td>
+                                    <td >14-00-00-08-38-95</td>
+                                    <th><a href="/details">详情</a></th>
+                                </tr>
+                                <tr>
+                                    <td >23356</td>
+                                    <td >服务器</td>
+                                    <td >计算服务</td>
+                                    <td >惠普</td>
+                                    <td >计算系列</td>
+                                    <td >HP_LL</td>
+                                    <td >14-00-00-08-38-95</td>
+                                    <th><a href="/details">详情</a></th>
                                 </tr>
                                 </tbody>
                             </table>
                         </div>
                         <!-- /.card-body -->
                     </div>
+                    <!-- /.card -->
                 </div>
-                <!-- /.card -->
+                <!-- /.col -->
             </div>
-            <!-- /.col -->
         </section>
+        <!-- /.content -->
     </div>
     <!-- /.row -->
     <!-- /.content -->
@@ -198,6 +257,9 @@
     <!-- Control sidebar content goes here -->
 </aside>
 <!-- /.control-sidebar -->
+</div>
+<!-- ./wrapper -->
+
 <!-- jQuery -->
 <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
 <!-- Bootstrap 4 -->
