--- a/src/main/resources/templates/base/equipment/details.html
+++ b/src/main/resources/templates/base/equipment/details.html
@@ -213,8 +213,9 @@
                       </div>
 
                       <div class="col-sm-12">
-                        <div style="padding-left: 80px;">
-                          <video class="img-fluid" style="height: 350px; width: auto;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}" alt="Photo"></video>
+                        <div style="padding-left: 30px;">
+                          <iframe src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fiyq5a7xu%2Findex.m3u8" height="350px" width="600px" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<!--                          <video class="img-fluid" style="height: 350px; width: auto;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}" alt="Photo"></video>-->
                         </div>
                       </div>
                     </div>
