--- a/src/main/resources/templates/documents/stand_details.html
+++ b/src/main/resources/templates/documents/stand_details.html
@@ -139,8 +139,9 @@
                         </div>
                       </div>
                       <div class="col-sm-6">
-                        <video style="height: 400px; width: 600px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">
-                        </video>
+<!--                        <video style="height: 400px; width: 600px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">-->
+                          <iframe src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fbmy2mkz9%2Findex.m3u8" height="400px" width="600px" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<!--                        </video>-->
                       </div>
                     </div>
                     <div class="row invoice-info">
